--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ header {
     flex-direction: column;
     align-items: center;
     position: relative;
+    
 }
 
 header::before {
@@ -202,6 +203,7 @@ section {
     display: flex;
     justify-content: space-between;
     margin-bottom: 95px;
+    
 }
 
 /*** SECTION 01 INVERTED WORLD ***/
@@ -348,6 +350,8 @@ footer {
     align-items: center;
     position: relative;
     overflow: hidden;
+   
+   
     
 }
 footer p {
@@ -376,3 +380,74 @@ footer::after {
     right: -50px;
     transform: rotateZ(10deg);
 }
+@media screen and (max-width: 1030px) {
+
+    #section-inverted-world,
+    #section-stranger-things-trailer {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .section-text {
+      display: none;
+    }
+  
+    .form-content {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    p {
+      text-align: center;
+    }
+  
+    footer::before,
+    footer::after {
+      display: none;
+    }
+  
+    #section-form {
+      width: 100%;
+    }
+  
+    iframe {
+      width: 90%;
+    }
+  
+    #section-stranger-things-gallery {
+      background: var(--background-lamp-image) 120% / 50% none;
+    }
+  }
+  
+  @media screen and (max-width:633px) {
+    h2 {
+      font-size: 2rem;
+  
+    }
+  }
+  
+  @media screen and (max-width:625px) {
+    h2 {
+      font-size: 1rem;
+    }
+  }
+  
+  @media screen and (max-width:430px) {
+    h2 {
+      font-size: 0.9rem;
+    }
+  }
+  
+  @media screen and (max-width:390px) {
+    h2 {
+      font-size: 0.8rem;
+    }
+  }
+  
+  @media screen and (max-width:400px) {
+    h3 {
+      font-size: 2rem;
+    }
+  }
+  
+  
